# FastAPI-Project

./: .gitignore  main.py  pyproject.toml
api/: users.py
db/: db_setup.py
