[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Mohamed-A-Badr <badr49960@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
