[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Mohamed Badr <60277974+Mohamed-A-Badr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
